--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "vue": "^3.0.0",
     "vue-next-select": "^2.5.0",
     "vue-router": "^4.0.8",
-    "vue-select": "^3.11.2"
+    "vue-select": "^3.11.2",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
