--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "vue-router": "^4.0.8",
     "vue-select": "^3.11.2",
     "vue-simple-alert": "^1.1.1",
+    "vue-unique-id": "^3.2.1",
+    "vue-uuid": "^2.0.2",
     "vuex": "^4.0.1"
   },
   "devDependencies": {
